--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,11 @@
 					<workingDirectory>${basedir}</workingDirectory>
 				</configuration>
 				<executions>
-					<execution>
-						<!-- optional: you don't really need execution ids, but it looks nice 
-							in your build log. -->
+					<!-- <execution>
 						<id>install node and npm</id>
 						<goals>
 							<goal>install-node-and-npm</goal>
 						</goals>
-						<!-- optional: default phase is "generate-resources" -->
 						<phase>generate-resources</phase>
 						<configuration>
 							<nodeVersion>v8.9.4</nodeVersion>
@@ -44,13 +41,9 @@
 							<goal>npm</goal>
 						</goals>
 
-						<!-- optional: default phase is "generate-resources" -->
 						<phase>generate-resources</phase>
 
 						<configuration>
-							<!-- optional: The default argument is actually "install", so unless 
-								you need to run some other npm command, you can remove this whole <configuration> 
-								section. -->
 							<arguments>install</arguments>
 						</configuration>
 					</execution>
@@ -60,16 +53,12 @@
 							<goal>npm</goal>
 						</goals>
 
-						<!-- optional: default phase is "generate-resources" -->
 						<phase>generate-resources</phase>
 
 						<configuration>
-							<!-- optional: The default argument is actually "install", so unless 
-								you need to run some other npm command, you can remove this whole <configuration> 
-								section. -->
 							<arguments>run build</arguments>
 						</configuration>
-					</execution>
+					</execution> -->
 				</executions>
 			</plugin>
 			<plugin>
