--- a/pom.xml
+++ b/pom.xml
@@ -160,24 +160,24 @@ An ANT build file allows to package the xpi for Firefox installation (read READM
 					</links>
 				</configuration>
 			</plugin>
-			<!-- <plugin> -->
-			<!-- <groupId>org.codehaus.mojo</groupId> -->
-			<!-- <artifactId>properties-maven-plugin</artifactId> -->
-			<!-- <version>1.0-alpha-1</version> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <phase>initialize</phase> -->
-			<!-- <goals> -->
-			<!-- <goal>read-project-properties</goal> -->
-			<!-- </goals> -->
-			<!-- <configuration> -->
-			<!-- <files> -->
-			<!-- <file>../build.properties</file> -->
-			<!-- </files> -->
-			<!-- </configuration> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
+			<!--> <plugin>
+			 <groupId>org.codehaus.mojo</groupId>
+			 <artifactId>properties-maven-plugin</artifactId>
+			 <version>1.0-alpha-1</version>
+			 <executions>
+			 <execution>
+			 <phase>initialize</phase>
+			 <goals>
+			 <goal>read-project-properties</goal>
+			 </goals>
+			 <configuration>
+			 <files>
+			 <file>../build.properties</file>
+			 </files>
+			 </configuration>
+			 </execution>
+			 </executions>
+			 </plugin>-->
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -225,6 +225,22 @@ An ANT build file allows to package the xpi for Firefox installation (read READM
 			<activation>
 			</activation>
 		</profile>
+		<profile>
+        <id>openshift</id>
+        <build>
+            <finalName>travel</finalName>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.1.1</version>
+                    <configuration>
+                        <outputDirectory>{dist}</outputDirectory>
+                        <warName>Vocbench</warName>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
 	</profiles>
 
 	<repositories>
